<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e1d8c2"
    tools:context=".optionsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/lblTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:fontFamily="sans-serif"
            android:padding="5dp"
            android:text="@string/lblOptions"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lblName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="35dp"
            android:fontFamily="sans-serif"
            android:padding="5dp"
            android:text="@string/lblChangeName"
            android:textAlignment="textStart"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="30dp"
            android:background="@android:color/white"
            android:ems="10"
            android:inputType="textPersonName"
            android:padding="5dp"
            android:singleLine="true"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/lblPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="35dp"
            android:fontFamily="sans-serif"
            android:padding="5dp"
            android:text="@string/lblChangePassword"
            android:textAlignment="textStart"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="30dp"
            android:background="@android:color/white"
            android:ems="10"
            android:inputType="textPassword"
            android:padding="5dp"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/lblPasswordWarn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:fontFamily="sans-serif"
            android:padding="5dp"
            android:textAlignment="textStart"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lblTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="35dp"
            android:fontFamily="sans-serif"
            android:padding="5dp"
            android:text="@string/lblChangeTheme"
            android:textAlignment="textStart"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spnTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="35dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@android:drawable/btn_dropdown"
            android:entries="@array/spnTheme"
            android:padding="5dp" />

        <Button
            android:id="@+id/btnSubmit"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            android:background="#6fb166"
            android:padding="18dp"
            android:text="@string/btnOptionsSubmit"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnClearData"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#bb4344"
            android:padding="18dp"
            android:text="@string/btnOptionsClear"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/imgBannerAd"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:contentDescription="@string/imgBannerAdDesc"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/advert_banner" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>