<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e1d8c2"
    tools:context=".newDiaryEntryActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lblTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:fontFamily="sans-serif"
            android:padding="5dp"
            android:text="@string/lblNewDiaryEntry"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:background="@android:color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/txtDiaryEntry"
                    style="@style/Widget.AppCompat.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:accessibilityPaneTitle="@string/txtDiaryEntryDesc"
                    android:contentDescription="@string/txtDiaryEntryDesc"
                    android:ems="10"
                    android:inputType="textMultiLine"
                    android:layoutDirection="inherit"
                    android:padding="5dp"
                    android:selectAllOnFocus="false"
                    android:singleLine="false"
                    android:textAlignment="inherit"
                    android:textColor="@android:color/black" />
            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/btnSubmit"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#6fb166"
            android:padding="18dp"
            android:text="@string/btnNewDiaryEntrySubmit"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/imgBannerAd"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:contentDescription="@string/imgBannerAdDesc"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/advert_banner" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>